fix(pi): permitir embed en Pi Browser y registrar service worker
- Sirve /sw.js sin motor de plantillas para evitar 500 (TemplateDoesNotExist)
- Registra el Service Worker en base.html (scope global)
- Elimina X-Frame-Options y usa CSP frame-ancestors para sandbox/app Pi
- Quita COOP/COEP/CORP que rompen iframes cross-origin en sandbox
- Ajusta cookies para third-party dentro de iframe:
  SESSION_COOKIE_SAMESITE=None / CSRF_COOKIE_SAMESITE=None (+ Secure)

Refs: net::ERR_BLOCKED_BY_RESPONSE en Pi Browser (paso 11)

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -346,6 +346,12 @@
     <script src="{% static 'js/cookiesConsent.portfolio.js' %}" defer></script>
     <script src="{% static 'js/pageLoader.js' %}" defer></script>
     <script src="{% static 'js/alerts.anim.js' %}" defer></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js').catch(()=>{});
+      }
+    </script>
+
 
 
     {% block extra_scripts %}{% endblock %}
