--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -59,6 +59,10 @@
 
 
   <link rel="prefetch" as="image" href="{% static 'images/logo-jfgc.webp' %}">
+   
+  <!-- SDK -->
+  <link rel="preconnect" href="https://sdk.minepi.com">
+  <link rel="dns-prefetch" href="//sdk.minepi.com">
 
 
   <!-- CSS externos existentes -->
@@ -340,23 +344,6 @@
       </div>
     </div>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="{% static 'js/animation.js' %}" defer></script>
-    <script src="{% static 'js/counters.js' %}" defer></script>
-    <script src="{% static 'js/cookiesConsent.portfolio.js' %}" defer></script>
-    <script src="{% static 'js/pageLoader.js' %}" defer></script>
-    <script src="{% static 'js/alerts.anim.js' %}" defer></script>
-    <script src="https://sdk.minepi.com/pi-sdk.js"></script>
-
-    {% block extra_scripts %}{% endblock %}
-
-    <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js').catch(()=>{});
-      }
-    </script>
-
       <!-- Page Loader Overlay -->
     <div id="page-loader" class="page-loader" aria-hidden="true">
       <div class="page-loader-backdrop"></div>
@@ -366,5 +353,24 @@
       </div>
     </div>
 
+    <!-- Scripts -->
+    <script src="https://sdk.minepi.com/pi-sdk.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="{% static 'js/animation.js' %}" defer></script>
+    <script src="{% static 'js/counters.js' %}" defer></script>
+    <script src="{% static 'js/cookiesConsent.portfolio.js' %}" defer></script>
+    <script src="{% static 'js/pageLoader.js' %}" defer></script>
+    <script src="{% static 'js/alerts.anim.js' %}" defer></script>
+
+    <script src="{% static 'js/pi-init.js' %}" defer></script>
+
+    {% block extra_scripts %}{% endblock %}
+
+
+    <script>
+      if ('serviceWorker' in navigator && location.hostname.endsWith('up.railway.app')) {
+        navigator.serviceWorker.register('/sw.js').catch(()=>{});
+      }
+    </script>
 </body>
 </html>
