--- a/services/templates/services/service_detail.html
+++ b/services/templates/services/service_detail.html
@@ -142,7 +142,7 @@
   <!-- Pi SDK -->
   <script src="https://sdk.minepi.com/pi-sdk.js" defer></script>
 
-  <!-- Config que lee pi_payments.js -->
+  <!-- Config pi_payments.js -->
   <script>
     window.PI_CFG = {
       sandbox: true,
@@ -153,7 +153,7 @@
     };
   </script>
 
-  <!-- Tu handler de pagos (¡este faltaba!) -->
+  <!-- Handler de pagos -->
   <script src="{% static 'js/pi_payments.js' %}" defer></script>
 
   <!-- Lazy video -->
